<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        if (Schema::hasTable('favourites')) {
            return;
        }

        Schema::create('favourites', function (Blueprint $table) {
            $table->id();
            $table->unsignedInteger('user_id');
            $table->foreign('user_id')->references('id')->on('users')->onDelete('cascade');
            $table->foreignId('tea_id')->constrained()->onDelete('cascade');
            $table->timestamps();

            $table->unique(['user_id', 'tea_id']);
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('favourites');
    }
};
